--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,6 +9,9 @@ body {
 }
 /* my-website Docs Tokens */
 :root {
+
+  --ifm-font-family-base: 'Inter', sans-serif;
+
   --docs-color-primary: #6851d6;
   /* --docs-color-primary-100: #1a90ff; */
   --docs-color-primary-tint: rgba(127, 17, 224, 0.16);
@@ -22,6 +25,10 @@ body {
   --docs-color-background-100: #f8f8f8;
   --docs-color-background-200: #efefef;
   --docs-color-background-300: #dcdcdc;
+  --docs-color-background-400: #c8c8c8;
+  --docs-color-background-500: #b0b0b0;
+  --docs-color-background-600: #969696; /* Darker Grey */
+  --docs-color-background-700: #7c7c7c; /* Even Darker Grey */
 
   /* Color from prism themes */
   /*
@@ -41,8 +48,14 @@ body {
   --docs-color-background-100: #1c1c1c;
   --docs-color-background-200: #2a2a2a;
   --docs-color-background-300: #2e2e2e;
+  --docs-color-background-400: #2c2c2c;
+  --docs-color-background-500: #1a1a1a;
+  --docs-color-background-600: #101010; /* Very Dark Grey (almost black) */
+  --docs-color-background-700: #0a0a0a;
+
 
   --docs-color-code-background: #1e1e1e;
+  
 }
 
 /* Docusaurus Theming */
