--- a/src/pages/apiCard.module.css
+++ b/src/pages/apiCard.module.css
@@ -42,6 +42,7 @@
   
   .apiCardTitle {
     margin-top: 0;
+    font-family: 'Inter', sans-serif;
     margin-bottom: 16px;
     font-size: 1.2rem;
     font-weight: 600;
@@ -53,6 +54,7 @@
   }
   
   .apiCardDescription {
+    font-family: 'Inter', sans-serif;
     color: #666;
     flex-grow: 1;
     line-height: 1.6;
