--- a/src/pages/additionalResourec.module.css
+++ b/src/pages/additionalResourec.module.css
@@ -7,11 +7,12 @@
   }
   
   .title {
-    font-family: 'sans-serif';
-    font-size: 1.5rem;
-    font-weight: 500;
-    margin-bottom: 2rem;
-    color: var(--ifm-color-emphasis-700);
+    font-family: 'Inter', sans-serif;
+    margin-bottom: 1.1rem; /* Equivalent to mb-3 */
+    font-size: 1.5rem!important;      /* Equivalent to text-2xl */
+    line-height: 2rem;      /* Line height for text-2xl */
+    font-weight: 600; /* Equivalent to font-bold */
+    color: var(--ifm-heading-color);
   }
   
   .resourceGrid {
@@ -25,12 +26,13 @@
     flex-direction: column;
     padding: 1.5rem;
     border-radius: 8px;
-    background-color: var(--button-bg-light);
-    border: 1px solid var(--button-border-light);
     transition: all 0.2s ease;
     text-decoration: none;
     cursor: pointer;
     height: 100%;
+    border: 1px solid var(--ifm-color-emphasis-200); /* border border-[--ifm-color-emphasis-200] */
+    background-color: var(--ifm-card-background-color); /* bg-[--ifm-card-background-color] */
+    box-shadow: var(--ifm-global-shadow-sm); /* shadow-sm */
   }
   
   html[data-theme='dark'] .resourceCard {
@@ -39,9 +41,10 @@
   }
   
   .resourceCard:hover {
-    background-color: var(--button-bg-light-hover);
-    transform: translateY(-2px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+    background-color: var(--ifm-color-emphasis-100);
+    border-color: var(--ifm-color-emphasis-400);
+    text-decoration: none;
+    color: var(--ifm-font-color-base);
   }
   
   html[data-theme='dark'] .resourceCard:hover {
@@ -53,7 +56,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f2f2f2;
+    background-color:#fff;
+    border: 2px solid var(--ifm-color-emphasis-200); /* border border-[--ifm-color-emphasis-200] */
     width: 40px;
     height: 40px;
     border-radius: 6px;
@@ -62,6 +66,8 @@
   
   html[data-theme='dark'] .iconBox {
     background-color: rgba(255, 255, 255, 0.1);
+    background-color:var(--docs-color-text);
+
   }
   
   .icon {
@@ -77,11 +83,13 @@
     font-size: 1.125rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
+    text-decoration: none;
     color: var(--ifm-color-emphasis-700);
   }
   
   .resourceDescription {
     font-size: 0.875rem;
+    text-decoration: none;
     color: var(--ifm-color-secondary-darkest);
     margin: 0;
     line-height: 1.4;
