--- a/src/pages/apiCard.module.css
+++ b/src/pages/apiCard.module.css
@@ -9,7 +9,7 @@
     max-width: 100%;
     margin: 30px 0;
     overflow: hidden;
-    border-radius: 12px; /* Increased border radius for more curve */
+    border-radius: 0.4rem; /* Increased border radius for more curve */
     border: 1px solid #e0e0e0;
   }
   
@@ -80,7 +80,7 @@
     border: 1px solid var(--ifm-color-emphasis-300);
     color: var(--ifm-color-emphasis-700);
     padding: 8px 16px;
-    border-radius: 10px; /* More rounded button corners */
+    border-radius: 0.3rem; /* More rounded button corners */
     font-weight: 500;
     font-size: 14px;
     text-decoration: none;
